# darts-toolkit

./: .gitignore  CITATION.cff  README.md  plan.md  pyproject.toml  pyrightconfig.json  setup.py
src/: __init__.py  config.yaml  lightning_pc_darts.py  pc_darts.py
src/base/: cell.py  darts_model.py  darts_module.py  derived_model.py  search_space.py  trainer.py
src/component/: auxiliary_classifier.py
src/components/: auxiliary_classifier.py
src/core/: classifier.py  operations.py  regularization.py  schedulers.py  search_space.py
src/data/: cifar_10.py
src/default/: optimizers.py  scheduler.py  stem.py
src/models/: lightning_pc_darts.py
src/utils/: tensor.py  visualization.py
src/variant/darts/: config.yaml  default.py  module.py  search_space.py  train.py
src/variant/fair_darts/: config.yaml  default.py  module.py  search_space.py  train.py
src/variant/mini_darts/: README.md  mini_darts.py
src/variant/pc_darts/: default.py  legacy_lightning_pc_darts.py  module.py  search_space.py  train.py
