[project]
name = "pc-darts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.4.0",
    "matplotlib>=3.9.2",
    "networkx>=3.4.1",
    "pyright>=1.1.387",
    "rich>=13.9.2",
    "tensorboard>=2.18.0",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "types-pyyaml>=6.0.12.20240917",
]
